[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/levelStatIndicator.gd" type="Script" id=1]
[ext_resource path="res://menus/buttonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/MenuCoinCount.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/GemIndicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/NoDeathsIndicator.tscn" type="PackedScene" id=5]

[node name="LevelStats" type="Control"]
margin_right = 1944.0
margin_bottom = 405.0
rect_min_size = Vector2( 1944, 405 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 5
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 5.0
margin_right = 1914.0
margin_bottom = 377.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 7.0
margin_right = 1877.0
margin_bottom = 372.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 2 )
text = "Label:"
align = 1

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
visible = false
margin_right = 1870.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 2 )
text = "Button Text"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 1870.0
margin_bottom = 372.0
custom_constants/separation = 30
alignment = 1

[node name="MenuCoinCount" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 600.0
margin_bottom = 210.0

[node name="GemIndicator" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 630.0
margin_right = 1240.0
margin_bottom = 210.0

[node name="NoDeathsIndicator" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1270.0
margin_right = 1870.0
margin_bottom = 210.0

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
